--- a/css/splash.css
+++ b/css/splash.css
@@ -28,6 +28,13 @@ span {
   margin-bottom: 15px;
   display: block;
 }
+span span {
+  display: inline;
+  color: #444343;
+}
+span span:hover {
+  color: #D8D9DA;
+}
 h4 {
   margin-left: 30px;
   font-family: "Overwatch-Regular";
