--- a/css/splash.css
+++ b/css/splash.css
@@ -25,6 +25,7 @@ body h3,h4 {
   display: inline;
 }
 span {
+  color: #444343;
   margin-bottom: 15px;
   display: block;
 }
@@ -34,6 +35,7 @@ span span {
 }
 span span:hover {
   color: #D8D9DA;
+  cursor: pointer;
 }
 h4 {
   margin-left: 30px;
@@ -50,7 +52,12 @@ h4 b {
 ::-webkit-scrollbar-track {
   display: none;
 }
-
+#top-graph path {
+  stroke: #EBB925;
+}
+#bottom-graph path {
+  stroke: #EF843C;
+}
 path {
   stroke: #EBB925;
   stroke-width: 1;
@@ -69,7 +76,13 @@ path {
   stroke-width: 0;
 }
 .area {
+  stroke-width: 0;
+}
+#top-graph .area {
   fill: #886027;
+}
+#bottom-graph .area {
+  fill: #5D3B26;
 }
 
 table,.chart {
