--- a/css/splash.css
+++ b/css/splash.css
@@ -20,9 +20,12 @@ h1,h3,h6 {
     font-family: "Overwatch-Italic";
     color: #D8D9DA;
 }
-body h3,h4 {
+body h3,h4,h1 {
   margin-top: 0px;
   display: inline;
+}
+span.title {
+  margin-top: 15px;
 }
 span {
   color: #444343;
